--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@ body {
   font-family: Arial, sans-serif;
   margin: 20px;
   color: var(--white);
+  background-color: rgb(241, 241, 241);
 }
 
 .logo {
@@ -99,6 +100,7 @@ button:hover {
     letter-spacing: 5px;
     color: var(--white);
     cursor: pointer;
+    font-weight: bold;
 }
 
 /* Modal styling */
