--- a/styles.css
+++ b/styles.css
@@ -1,63 +1,66 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 :root {
-    --sky-blue: #66b5ff;
-    --white: white;
-    --navy-blue:rgb(1, 14, 32);
-    --darksky-blue:rgb(0, 102, 255);
-    --black-color: black;
+  --sky-blue: #66b5ff;
+  --white: white;
+  --navy-blue: rgba(1, 14, 32, 0.92);
+  --darksky-blue: rgb(0, 102, 255);
+  --black-color: black;
 }
 
 body {
   font-family: Arial, sans-serif;
   margin: 20px;
   color: var(--white);
-  background-color: rgb(241, 241, 241);
 }
 
 .logo {
-    border-radius: 50%;
-    width: 100px;
-    height: 100px;
-    object-fit: scale-down;
-    border: 2px dotted ;
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  object-fit: scale-down;
+  border: 2px dotted;
 }
 
 .header-semester {
-    margin: 20px 0 5px;
-    border-bottom: 1px dotted;
+  margin: 20px 0 5px;
+  border-bottom: 1px dotted;
 }
 
 .container > h1 {
-    font-size: 1.5em;
-    margin: 5px 0 40px 0;
-    text-align: center;
+  font-size: 1.5em;
+  margin: 5px 0 40px 0;
+  text-align: center;
 }
 
 select {
-    height: 2em;
-    outline: none;
-    background-color: var(--white);
+  height: 2em;
+  outline: none;
+  background-color: var(--white);
 }
 .deptselection {
-    margin: 0 auto 10px 0;
+  margin: 0 auto 10px 0;
 }
 .container {
-    margin: auto;
-    width: fit-content;
-    padding: 50px;
-    background-color: var(--navy-blue);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  margin: auto;
+  width: fit-content;
+  padding: 50px;
+  border-radius: 10px;
+  display: flex;
+  background: linear-gradient(var(--navy-blue), var(--navy-blue)),
+    url("./assest/unizikLogo.png") no-repeat center center;
+  background-size: contain;
+  background-attachment: fixed;
+  flex-direction: column;
+  align-items: center;
 }
 
 input[type="radio"] {
-    accent-color: var(--darksky-blue);
+  accent-color: var(--darksky-blue);
 }
 button {
   margin: 10px 0;
@@ -75,7 +78,7 @@ button:hover {
 }
 
 .course-item {
-  position: relative; 
+  position: relative;
   display: flex;
   align-items: center;
   gap: 10px;
@@ -86,30 +89,32 @@ button:hover {
   position: relative;
   display: inline-flex;
   align-items: center;
-  font-weight: bold;  
+  font-weight: bold;
 }
 
 #clearData {
-    margin-top: 30px;
-    height: 3em;
-    min-width: 80%;
+  margin-top: 30px;
+  height: 3em;
+  min-width: 80%;
 }
 
 .author {
-    font-size: 11px;
-    letter-spacing: 5px;
-    color: var(--white);
-    cursor: pointer;
-    font-weight: bold;
+  font-size: 11px;
+  letter-spacing: 5px;
+  color: var(--white);
+  cursor: pointer;
+  font-weight: bold;
 }
 
 /* Modal styling */
 .modal {
   display: none;
   position: fixed;
-  top: 0; left: 0;
-  width: 100%; height: 100%;
-  background: rgba(0,0,0,0.6);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
   justify-content: center;
   align-items: center;
   color: var(--black-color);
@@ -120,7 +125,7 @@ button:hover {
   padding: 20px;
   border-radius: 8px;
   width: 300px;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
 }
 
 .modal-content input {
@@ -139,13 +144,13 @@ button:hover {
 }
 
 .info-btn:hover {
-    background: none;
+  background: none;
 }
 
 .tooltip {
   position: absolute;
   left: 50%;
-  bottom: 100%;        
+  bottom: 100%;
   transform: translateX(-50%);
 
   background: var(--sky-blue);
@@ -167,16 +172,16 @@ button:hover {
   visibility: visible;
 }
 
-
 @media (max-width: 480px) {
   .container {
     margin: auto;
     width: 100%;
     padding: 20px;
     min-height: 100vh;
+    border-radius: unset;
   }
 
   body {
-  margin: 0;
+    margin: 0;
   }
 }
